# nnr

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  aligned_alloc.h  allocator.h  arena.cpp  arena.h  attr_key.cpp  attr_key.h  attr_keys.def  bfloat16.h  bool.h  cache_topology.h  cpu_features.h  float16.h  graph_optimizer.cpp  graph_optimizer.h  layout_cost.h  memory_planner.cpp  memory_planner.h  nnr.cpp  nnr.h  nnrconf.h  no_popup.h  pool.cpp  pool.h  profiler.h  registry.cpp  registry.h  tensor_view.h  thread_pool.h  thread_pool_v2.h  trace.cpp  trace.h
src/backend/arm/: conv_direct_neon_inline.h  conv_first_layer_neon.h  conv_fp16_direct_neon.h  conv_fp16_nhwc_direct_neon.h  conv_int8_direct_neon.h  conv_int8_nhwc_direct_neon.h  conv_last_layer_neon.h  conv_nchwc_3x3s2_neon.h  conv_nchwc_neon.h  conv_neon.h  depthwise_fp16_neon.h  depthwise_int8_neon.h  depthwise_nchwc_neon.h  depthwise_neon.h  depthwise_nhwc_neon.h  f16_convert_neon.h  gemm_fp16_neon.h  gemm_int8_neon.h  gemm_neon.h  gemm_ukernel_neon.h  jit_gemm_driver.h  jit_gemm_int8_neon.h  jit_gemm_neon.h  layout_neon.h  lrn_neon.h  pool_neon.h  post_ops_neon.h  sdpa_neon.h  simd_math_neon.h  softmax_neon.h  vec_ops_neon.h  winograd_neon.h
src/backend/cpu/: Abs.cpp  Adagrad.cpp  Adam.cpp  AffineGrid.cpp  ArgMax.cpp  ArgMin.cpp  ArgReduce.h  Attention.cpp  AveragePool.cpp  BatchNormalization.cpp  Bernoulli.cpp  BitCast.cpp  BitShift.cpp  Cast.cpp  CastLike.cpp  Celu.cpp  CenterCropPad.cpp  Clip.cpp  Col2Im.cpp  Compress.cpp  Concat.cpp  ConcatFromSequence.cpp  Constant.cpp  ConstantOfShape.cpp  Conv.cpp  ConvInteger.cpp  ConvTranspose.cpp  Conv_depthwise.h  Conv_exec.h  Conv_exec_entry.h  Conv_exec_nchw.h  Conv_exec_nchwc.h  Conv_exec_nhwc.h  Conv_reshape.h  CumProd.cpp  CumSum.cpp  DFT.cpp  DeformConv.cpp  DepthToSpace.cpp  DequantizeLinear.cpp  (+139 more)
src/backend/cpu/kernel/: conv.h  conv_direct.h  conv_nchwc.h  depthwise.h  elementwise.h  f16_convert.h  gemm.h  layout.h  lrn.h  pool.h  post_ops.h  quant_exec.h  winograd.h  winograd_transforms.h
src/backend/gpu/: gpu_algorithm.h  gpu_array.h  gpu_cache.cpp  gpu_cache.h  gpu_common.h  gpu_device.h  gpu_plan.h  gpu_span.h  gpu_table.h
src/backend/gpu/cuda/: Activations.cpp  Cast.cpp  Concat.cpp  Conv.cpp  Elementwise.cpp  Gather.cpp  Gemm.cpp  MatMul.cpp  Misc.cpp  NonMaxSuppression.cpp  Norm.cpp  Norm2.cpp  Pool.cpp  QLinearAdd.cpp  QLinearAveragePool.cpp  QLinearConcat.cpp  QLinearConv.cpp  QLinearGlobalAveragePool.cpp  QLinearMatMul.cpp  QLinearMul.cpp  Quant.cpp  Reduce.cpp  Reshape.cpp  Resize.cpp  Scatter.cpp  Shape.cpp  Softmax.cpp  Structural.cpp  TopK.cpp  Transpose.cpp  Variadic.cpp  cuda_backend.cpp  cuda_backend.h  cuda_device.cpp  cuda_device.h  cupti_profiler.cpp  cupti_profiler.h  elementwise.h  gemm_kernel.cuh  gemm_wmma.h  (+11 more)
src/backend/webgpu/: ArgReduce.cpp  BatchNormalization.cpp  CMakeLists.txt  Cast.cpp  Clip.cpp  Concat.cpp  ConstantOfShape.cpp  Conv.cpp  ConvTranspose.cpp  CumSum.cpp  DepthToSpace.cpp  DequantizeLinear.cpp  Einsum.cpp  Expand.cpp  Gather.cpp  GatherND.cpp  Gemm.cpp  InstanceNormalization.cpp  LRN.cpp  LayerNormalization.cpp  LeakyRelu.cpp  MatMul.cpp  OneHot.cpp  Pad.cpp  QLinearAdd.cpp  QLinearConv.cpp  QLinearMatMul.cpp  QuantizeLinear.cpp  Range.cpp  ReduceLogSumExp.cpp  Reshape.cpp  Resize.cpp  ScatterElements.cpp  ScatterND.cpp  Slice.cpp  Softmax.cpp  Split.cpp  Tile.cpp  TopK.cpp  Transpose.cpp  (+24 more)
src/backend/webgpu/wgsl/: batchnorm.wgsl  clip.wgsl  concat.wgsl  conv.wgsl  conv_tiled.wgsl  conv_transpose.wgsl  depth_to_space.wgsl  expand.wgsl  gather.wgsl  gemm.wgsl  instance_norm_apply.wgsl  instance_norm_stats.wgsl  layer_norm.wgsl  leaky_relu.wgsl  matmul.wgsl  matmul_bcast.wgsl  matmul_big.wgsl  matmul_tiled.wgsl  pad.wgsl  shaders.h.in  slice.wgsl  softmax.wgsl  space_to_depth.wgsl  tile.wgsl  transpose.wgsl
src/backend/x64/: conv_direct_avx512.h  conv_direct_nchw_avx512.h  conv_first_layer_avx512.h  conv_first_layer_int8_avx512.h  conv_int8_direct_avx512.h  conv_int8_nhwc_direct.h  conv_last_layer_avx512.h  conv_nchwc_3x3s2_avx512.h  conv_nchwc_avx512.h  conv_x64.h  depthwise_avx2.h  depthwise_avx512.h  depthwise_generic_x64.h  depthwise_int8_avx512.h  depthwise_nhwc_x64.h  elementwise_x64.h  f16_convert_x64.h  gemm_avx2.h  gemm_avx512.h  gemm_bf16_avx512.h  gemm_int8_avx512.h  gemm_ukernel_avx2.h  gemm_ukernel_avx512.h  jit_conv_int8_ukernel.cpp  jit_conv_int8_ukernel.h  jit_conv_nchwc.cpp  jit_conv_nchwc.h  jit_depthwise_avx512.cpp  jit_depthwise_avx512.h  jit_epilogue.cpp  jit_epilogue.h  jit_gemm_ukernel.cpp  jit_gemm_ukernel.h  jit_kernel.cpp  jit_kernel.h  jit_qgemm_ukernel.cpp  jit_qgemm_ukernel.h  layout_x64.h  lrn_avx2.h  lrn_avx512.h  (+16 more)
src/format/onnx/: onnx.proto3  onnx_loader.cpp  onnx_loader.h  onnx_pb.cpp  onnx_pb.h  pb.h
src/format/tflite/: tflite_loader.cpp  tflite_loader.h  tflite_ops.h  tflite_schema.h
src/graph_optimizer/: assign_blocked_layouts.cpp  assign_layouts.cpp  cancel_reorders.cpp  decompose.cpp  fold_bn_qdq.cpp  fold_constants.cpp  fuse_activations.cpp  fuse_conv_bn.cpp  fuse_pad.cpp  fuse_post_ops.cpp  fuse_qdq.cpp  fuse_qdq_compute.cpp  fuse_sdpa.cpp  fuse_webgpu_common.h  fuse_webgpu_elementwise.cpp  fuse_webgpu_matmul_chain.cpp  graph_optimizer_internal.h  insert_reorders.cpp  optimize_transposes.cpp  pass_framework.h  pass_graph_optimizer.cpp  qdq_helpers.h  scroll_chains.cpp
